<resources>
    <string name="app_name">Contactos</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="mail">E-mail</string>
    <string name="descripcion_contacto">Descripción de contacto</string>
    <string name="boton_contactos">Siguiente</string>
    <string name="param_nombre">Nombre</string>
    <string name="param_fechaNacimiento">Fecha de Nacimiento</string>
    <string name="param_telefono">Telefono</string>
    <string name="param_mail">Mail</string>
    <string name="param_descripcion">Descripcion</string>
    <string name="btnEditarContacto">Editar Datos</string>
    <string name="tvTituloConfirmarContactos">Confirmar Datos</string>
    <string name="tvFechaNacimiento_ConfirmarContactos">"Fecha de Nacimiento: " %1$s</string>
    <string name="tvTelefono_ConfirmarContactos">"Tel: " %1$s</string>
    <string name="tvMail_ConfirmarContactos">"E-mail: " %1$s</string>
    <string name="tvDescripcion_ConfirmarContactos">"Descripción: " %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
