<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hmartinez.contactos.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/mrgIzqConfirmarContactos"
        android:layout_marginEnd="@dimen/mrgIzqConfirmarContactos"
        android:layout_marginTop="@dimen/mrgArrConfirmarContactos"
        android:layout_marginBottom="@dimen/mrgAbaConfirmarContactos"
        android:id="@+id/linearLayoutCompat2">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo" />
        <TextView
            android:id="@+id/tvFechaNacimientoCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_date_range"
            android:text="@string/fecha_nacimiento"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <DatePicker
            android:id="@+id/dpFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layout_gravity="center_horizontal"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textWebEmailAddress"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_contacto"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/btnContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_contactos"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>